--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,6 +32,6 @@
   </div>
 
   <div>
-    <%= form.submit class: "btn btn-primary %>
+    <%= form.submit class: "btn btn-primary" %>
   </div>
 <% end %>
